# folds

./: .dockerignore  .gitignore  pyproject.toml  readme.md
.github/workflows/: meow.yml
bots/: readme.md
bots/avatar_emoji_bot/: pyproject.toml
bots/avatar_emoji_bot/src/: __main__.py  functions.py  logic.py  main.py  utils.py
bots/flexdo/: pyproject.toml
bots/multiple_bots/: appconfig.py  main.py
examples/: readme.md
examples/avatar_emoji_bot/: Dockerfile  functions.py  logic.py  main.py  pyproject.toml  utils.py
examples/avatar_emoji_bot/src/avatar_emoji_bot/: __main__.py  functions.py  logic.py  skill.py
examples/flexdo/: Dockerfile  main.py  pyproject.toml
examples/flexdo/src/flexdo/: __main__.py
examples/smeshariki/: Dockerfile  pyproject.toml  strings.yml
examples/smeshariki/src/smeshariki/: __init__.py  __main__.py  app.py  common_logic.py  common_skill.py  openai_client.py  settings.py  strings.py
examples/smeshariki/src/smeshariki/skills/: barash.py  ezhik.py  losyash.py  pm.py
folds/: __init__.py  exceptions.py  utils.py
folds/admin/: admin.py
folds/app/: app.py  bot.py  bot_client.py  bot_in_app.py  logic.py
folds/context/: __init__.py  context_var_wrapper.py  vars.py
folds/reload/: __main__.py
folds/rules/: parameter_types.py  rule.py  rule_builder_set.py  rule_consumer.py
old_examples/multiple_bots/: app.py  appconfig.py  main.py
src/folds/: __init__.py  exceptions.py  utils.py
src/folds/admin/: __init__.py  admin.py
src/folds/app/: __init__.py  app.py  bot.py  bot_in_app.py  skill.py
src/folds/context/: __init__.py  context_var_wrapper.py
src/folds/reload/: watcher.py
src/folds/rules/: parameter_types.py  rule.py  rule_builder_factory.py  rule_builder_set.py  rule_consumer.py
