[tool.poetry]
name = "flexdo"
version = "0.1.0"
description = ""
authors = ["Artem Ivanov <art.ivanov@jetbrains.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
folds = {path = "../..", develop = true}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
