[project]
name = "smeshariki"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
authors = [
    { name = "Artem Ivanov", email = "art.ivanov@jetbrains.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
smeshariki = "smeshariki:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
